# chatty

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  chatty.skill  package-lock.json  package.json  pyproject.toml  turbo.json
apps/client/: .prettierrc  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/client/locales/: en.json  ko.json
apps/client/src/: app.tsx  bridge.ts  cli.ts  config.ts  index.tsx  types.ts
apps/client/src/components/: CreateRoomForm.tsx  InputBar.tsx  MessageList.tsx  NicknameSetupScreen.tsx  PasswordInputScreen.tsx  RoomListScreen.tsx  Separator.tsx  StatusBar.tsx  TextInput.tsx  UserListScreen.tsx
apps/client/src/hooks/: useChat.ts  useCommandHistory.ts  useKeyBindings.ts  useScroll.ts
apps/client/src/i18n/: context.tsx  default.ts  interpolate.ts  loader.ts  types.ts
apps/client/src/lib/: auth.ts  client.ts  sse.ts  textLayout.ts  tokenStore.ts
apps/client/tests/: chat.e2e.ts  cli.e2e.ts  game.e2e.ts  global-setup.ts  login.e2e.ts  rooms.e2e.ts  sse-events.e2e.ts
apps/server/: alembic.ini  package.json  pyproject.toml  pyrightconfig.json
apps/server/app/: config.py  database.py  deps.py  game_relay.py  main.py  message_buffer.py  message_writer.py  redis_client.py  security.py  slash.py  sse.py
apps/server/app/admin/: router.py  schemas.py  service.py
apps/server/app/auth/: callback_messages.json  router.py  schemas.py  service.py
apps/server/app/messages/: router.py  schemas.py  service.py
apps/server/app/middleware/: logging.py  rate_limit.py
apps/server/app/moderation/: cache.py  enforcer.py  filter.py  router.py  schemas.py  service.py  spam.py
apps/server/app/rooms/: router.py  schemas.py  service.py
apps/server/app/users/: router.py  schemas.py
apps/server/migrations/: 001_initial.sql
apps/server/migrations/alembic/: env.py
apps/server/migrations/alembic/versions/: 001_initial_initial_schema.py  002_drop_message_edit_cols.py  003_drop_user_last_room_id.py  004_google_oauth.py  005_lobby_admin_only.py  006_truncate_messages.py  007_drop_global_bans.py
apps/server/tests/: conftest.py  test_admin.py  test_auth.py  test_messages.py  test_moderation.py  test_rooms.py  test_sse.py
docs/: HARNESS.md  design.md  features.json  game-relay-protocol.md  manual-test.md  plan-client.md  plan-server.md  plan-test-client.md
scripts/: init.sh  manual-test.sh  smoke-test-server.sh  stress-concurrency.py  stress-read-auth.py  stress-sse-limit.py  stress-test.py
skill/: SKILL.md
skill/scripts/: chatty-cli.sh
(+13 files in other folders)
